@@ -1,3 +1,7 @@
+- Fri Jan 26 13:59:52 EST 2007
+
+Take out "wrapping" message.
+
 - Thu Jan 25 13:36:53 EST 2007
 
 POD
